--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "Unlicense",
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.195",
     "@types/screeps": "^3.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -84,7 +85,13 @@
               "publicOnly": true
             }
           ],
-          "jsdoc/require-description": "error"
+          "jsdoc/require-description": "error",
+          "prefer-const": [
+            "error",
+            {
+              "destructuring": "all"
+            }
+          ]
         },
         "parserOptions": {
           "project": true
