--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "",
   "license": "Unlicense",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
     "@types/screeps": "^3.3.3",
