--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "semantic-release": "^21.0.6",
     "ts-jest": "^29.1.1",
     "typedoc": "^0.24.8",
+    "typedoc-plugin-external-link": "^2.1.0",
     "typedoc-theme-hierarchy": "^4.0.0",
     "typescript": "5.0.x"
   },
